Sun Oct  3 22:34:13 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (reap_children, pipeline_sigchld,
	  pipeline_install_sigchld): Move above pipeline_start.
	  (pipeline_install_sigchld): Make static.  Return immediately if
	  already installed.
	  (pipeline_start): Call pipeline_install_sigchld.
	* lib/pipeline.h (pipeline_start): Document that this installs a
	  SIGCHLD handler.
	  (pipeline_install_sigchld): Remove prototype.
	* src/lexgrog_test.c (main), src/man.c (main), src/manconv_main.c
	  (main), src/mandb.c (main), src/whatis.c (main),
	  src/zsoelim_main.c (main): Stop calling pipeline_install_sigchld.

Thu Sep 30 16:01:22 BST 2010  Colin Watson  <cjwatson@debian.org>

	Convert the French manual pages translation to po4a.

	* man/LINGUAS: Remove fr.
	* man/LINGUAS.po4a: Add fr.
	* man/fr/man1, man/fr/man5, man/fr/man8: Remove.
	* man/fr/Makefile.am (PO4A_LINGUA): Set to yes.
	  (EXTRA_DIST): Add translator.add.
	  (man1_MANS): Add man1/manconv.1.
	* man/po4a/Makefile.am (POFILES): Add po/fr.po.
	* man/po4a/po4a.cfg (po4a_langs): Add fr.
	* man/THANKS: Add David Prévot.
	* .bzrignore: Add man/fr/man1, man/fr/man5, and man/fr/man8.

Thu Sep 30 15:44:46 BST 2010  David Prévot  <david@tilapin.org>

	* po/fr.po: Update from Translation Project.
	* man/po4a/po/fr.po: New from Translation Project.
	* man/fr/translator.add: New file.

Mon Sep 27 19:06:10 BST 2010  Colin Watson  <cjwatson@debian.org>

	Move util to libman.

	* src/util.c: Move to ...
	* lib/util.c: ... here.
	* lib/Makefile.am (libman_la_SOURCES): Add util.c.
	* src/Makefile.am (accessdb_SOURCES, catman_SOURCES,
	  globbing_SOURCES, lexgrog_SOURCES, man_SOURCES, mandb_SOURCES,
	  manpath_SOURCES, whatis_SOURCES, zsoelim_SOURCES): Remove util.c.
	* lib/README: Add util.c.

Mon Sep 27 00:50:37 BST 2010  Colin Watson  <cjwatson@debian.org>

	* gnulib/m4/gnulib-cache.m4: Remove obsolete modules atexit, memcmp,
	  and strcspn.
